fix: content scrolls behind pagination bar (#193)

--- a/gather2-ui/ui/assets/css/_survey-view.scss
+++ b/gather2-ui/ui/assets/css/_survey-view.scss
@@ -53,6 +53,7 @@
   nav {
     position: sticky;
     top: 70px;
+    z-index: 100;
   }
 
   .pagination {
@@ -98,6 +99,7 @@
 .survey-content {
   width: 100%;
   overflow: auto;
+  position: relative;
 }
 
 .survey-content.single {
